[package]
name = "timings"
version = "0.1.0"
edition = "2021"

[dependencies]
env_logger = "0.11.5"
pollster = "0.4.0"
wgpu = { path = "../wgpu/wgpu" }
winit = { version = "0.29"}
windows = { version = "0.58", default-features = false, features = ["Win32_Graphics_Direct3D12", "Win32_Graphics_Dxgi_Common"] }
serialport = "4.6.1"
